# ex613_juliet_001

./: CMakeLists.txt
testcases/000/248/302/: CWE78_OS_Command_Injection__wchar_t_listen_socket_execlp_04.cxx
testcases/000/248/721/: CWE78_OS_Command_Injection__wchar_t_listen_socket_w32_spawnvp_83_bad.cpp  CWE78_OS_Command_Injection__wchar_t_listen_socket_w32_spawnvp_83_goodG2B.cpp
